fix:fixed info popup z-index

--- a/src/components/InfoPopup/InfoPopup.scss
+++ b/src/components/InfoPopup/InfoPopup.scss
@@ -16,7 +16,7 @@
   align-items: center;
   border-radius: 40px;
   transition: all 2s ease;
-  z-index: 4;
+  z-index: 10;
   &_info {
     background: $green;
   }
